--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
   "website": "https://getsitecontrol.com/",
   "repository": "https://github.com/jane-doe/small-sharp-tool",
   "buildpacks": [
+    "heroku/nodejs",
     {
       "url": "https://github.com/jontewks/puppeteer-heroku-buildpack"
     }
