--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "npm run build && node ./lib/entry"
+    "start": "node ./lib/entry",
+    "precommit": "npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/node": "^8.0.45",
     "@types/puppeteer": "^0.12.0",
+    "husky": "^0.14.3",
     "typescript": "^2.5.3"
   }
 }
