--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "nodemon ./lib/entry",
+    "start": "node ./lib/entry",
+    "watch": "nodemon ./lib/entry",
     "precommit": "npm run build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^0.40.0",
-    "nodemon": "^1.14.11",
+    "express": "^4.16.2",
     "puppeteer": "^1.0.0"
   },
   "devDependencies": {
+    "@types/express": "^4.11.0",
     "@types/node": "^8.5.9",
     "@types/puppeteer": "^1.0.0",
     "husky": "^0.14.3",
+    "nodemon": "^1.14.11",
     "typescript": "^2.6.2"
   }
 }
