add nginx  healthcheck url

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,10 @@ http {
       server_name  localhost;
       access_log  off;
 
+      location = /health {
+         return 200;
+      }
+
       location / {
          # rewrite any subpath to root
          rewrite /(.*)   /  break;
