--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "chrome-lambda",
   "version": "1.1.3",
+  "homepage": "https://getsitecontrol.com/",
   "description": "",
-  "main": "index.js",
+  "main": "lib/entry.js",
   "engines": {
     "node": "8.9.0",
     "npm": "5.5.1"
@@ -11,19 +12,19 @@
     "build": "tsc",
     "start": "node ./lib/entry",
     "watch": "nodemon ./lib/entry",
-    "precommit": "npm run build"
+    "precommit": "rm -rf ./lib && npm run build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "puppeteer": "^1.0.0"
+    "puppeteer": "^1.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.11.0",
     "@types/node": "^8.5.9",
-    "@types/puppeteer": "^1.0.0",
+    "@types/puppeteer": "^1.2.0",
     "husky": "^0.14.3",
     "nodemon": "^1.14.11",
     "typescript": "^2.6.2"
