fix nginx.conf - serve subpaths

--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ http {
 
       location / {
          # rewrite any subpath to root
-         rewrite /(.*)   /  break;
+         rewrite /(.*)   /$1  break;
          proxy_pass      http://chrome:3000;
       }
    }
