add virtual path /puppeteer/ to nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,11 @@ http {
          return 200;
       }
 
+      location /puppeteer/ {
+         # rewrite /puppeteer/{path} to /{path}
+         rewrite /puppeteer/(.*)   /$1  break;
+         proxy_pass      http://chrome:3000;
+      }
       location / {
          # rewrite any subpath to root
          rewrite /(.*)   /$1  break;
