--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "config": {
     "prefix": "gsc",
-    "script": "l.getsitecontrol.com/([0-9a-z]{8}).js"
+    "script": "l.getsitecontrol.com/(?:s/)?([0-9a-z]{8}).js"
   },
   "scripts": {
     "build": "tsc",
