--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "node ./lib/entry",
-    "watch": "nodemon ./lib/entry"
+    "tsc": "tsc -w",
+    "start": "nodemon --watch ./lib/ ./lib/entry"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "puppeteer": "^1.18.1"
+    "pngquant": "^3.0.0",
+    "puppeteer": "^1.18.1",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.0",
